k8s/hydra-postgres.yaml
# Reason for subPath
# https://stackoverflow.com/questions/51168558/how-to-mount-a-postgresql-volume-using-aws-ebs-in-kubernete/51174380
apiVersion: v1
kind: Service
metadata:
  name: hydra-postgres-service
  labels:
    name: hydra-postgres-service
spec:
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
  selector:
    role: hydra-postgres

---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: hydra-postgres
spec:
  serviceName: 'hydra-postgres-service'
  replicas: 1
  template:
    metadata:
      labels:
        role: hydra-postgres
        environment: production
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: hydra-postgres
          image: postgres:9.6
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: hydra-postgres-storage
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: hydra-postgres-storage
      spec:
        # storageClassName: 'pg-retain-policy'
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 100Mi
# ---
# apiVersion: storage.k8s.io/v1
# kind: StorageClass
# metadata:
#   name: pg-retain-policy
# provisioner: docker.io/hostpath
# reclaimPolicy: Retain
# volumeBindingMode: Immediate
