k8s/ingress.yaml
# https://kubernetes.github.io/ingress-nginx/examples/rewrite/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /issuer(/|$)(.*)
            backend: 
              serviceName: hydra-service
              servicePort: 9000
          - path: /oauth2/admin(/|$)(.*)
            backend: 
              serviceName: hydra-service
              servicePort: 9001

---
# https://kubernetes.github.io/ingress-nginx/examples/rewrite/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-login-consent
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /auth
            backend: 
              serviceName: oauth-login-consent-service
              servicePort: 3000
